casestudy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: casestudy
spec:
  selector:
    matchLabels:
      app: casestudy
  template:
    metadata:
      labels:
        app: casestudy
    spec:
      containers:
      - name: casestudy
        image: sneha1295/casestudyibm
        ports:
        - containerPort: 80
       
---
apiVersion: v1
kind: Service
metadata:
  name: casestudy
spec:
  type: NodePort
  selector:
    app: casestudy
  ports:
  - port: 80
    targetPort: 9002
    nodePort: 32000
