currencyconversion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyconversion
spec:
  replicas: 3
  selector:
    matchLabels:
      app: currencyconversion
  template:
    metadata:
      labels:
        app: currencyconversion
    spec:
      containers:
      - name: currencyconversion
        image: sneha1295/currencyconversionfactor
        ports:
        - containerPort: 80
       
---
apiVersion: v1
kind: Service
metadata:
  name: currencyconversion
spec:
  type: NodePort
  selector:
    app: currencyconversion
  ports:
  - port: 80
    targetPort: 9000
    nodePort: 30100
